# EASY-EAI-Toolkit-C-SDK

./: .gitignore  README.md  README_CN.md  README_EN.md  build_all.sh
EAI-source/common/inc/: config.h  interface.h  system.h
EAI-source/common/src/: interface.c
algorithm_api/: build.sh
algorithm_api/geometry/: CMakeLists.txt
algorithm_api/geometry/src/: geometry.cpp
algorithm_api/qrdecode/: CMakeLists.txt
algorithm_api/qrdecode/src/: qrdecode.cpp
common_api/: build.sh
common_api/base64/src/: base64.cpp
common_api/data_check/: CMakeLists.txt
common_api/data_check/src/: bcc.c  crc.c  cs.c  md5.c
common_api/file_opt/: CMakeLists.txt
common_api/file_opt/src/: file_opt.cpp
common_api/font_engine/: CMakeLists.txt
common_api/font_engine/include_internal/: CvxText.h
common_api/font_engine/include_internal/freetype/config/: ftoption.h
common_api/font_engine/src/: Conversion.cpp  CvxText.cpp
common_api/ini_wrapper/: CMakeLists.txt
common_api/ini_wrapper/src/: ini_wrapper.c
common_api/json_parser/include/: json_parser.h
common_api/json_parser/src/: json_parser.cpp
common_api/qrencode/: CMakeLists.txt
common_api/qrencode/src/: qrcode.cpp  qrencode.cpp  qrspec.cpp  rscode.cpp
common_api/string_opt/: CMakeLists.txt
common_api/string_opt/src/: string_opt.c
common_api/system_opt/: CMakeLists.txt
common_api/system_opt/include/: system_opt.h
common_api/system_opt/include_internal/: ipcClient.h  ipcCommon.h  ipcServer.h  print_msg.h
common_api/system_opt/src/: system_opt.cpp
common_api/system_opt/src/IPC/: ipcClient.cpp  ipcCommon.cpp  ipcServer.cpp
media_api/: build.sh
media_api/bmp_opt/: CMakeLists.txt
media_api/bmp_opt/src/: bmp_opt.c
media_api/wav_opt/: CMakeLists.txt
media_api/wav_opt/src/: wav_opt.c
netProtocol_api/: build.sh
netProtocol_api/https/: CMakeLists.txt
netProtocol_api/https/src/: https_request.cpp
peripheral_api/audio/: CMakeLists.txt
peripheral_api/audio/src/: audio.c
peripheral_api/backlight/: CMakeLists.txt
peripheral_api/backlight/src/: backlight.c
peripheral_api/camera/: CMakeLists.txt
peripheral_api/camera/src/: mipi_camera.c  usb_camera.c
peripheral_api/display/src/: disp.c  lmodrm_display.c
peripheral_api/display/src/rkfacial/: lmodrm_display.h
peripheral_api/gpio/: CMakeLists.txt
peripheral_api/gpio/src/: gpio.c
peripheral_api/iic/: CMakeLists.txt
peripheral_api/iic/src/: iic.c  iic.cpp
peripheral_api/network/: CMakeLists.txt
peripheral_api/network/src/: network.cpp
peripheral_api/pwm/src/: pwm.cpp
peripheral_api/spi/: CMakeLists.txt
peripheral_api/spi/src/: clist.c  clist.h  spiapi.c
peripheral_api/tcpsocket/: CMakeLists.txt
peripheral_api/tcpsocket/src/: tcpsocket.c
peripheral_api/touchscreen/: CMakeLists.txt
peripheral_api/touchscreen/src/: touchscreen.cpp
peripheral_api/uart/src/: uart.c
peripheral_api/wdt/: CMakeLists.txt
peripheral_api/wdt/src/: peripheral-watchdog.cpp
